adding scripts / styles options

--- a/sample/index.html
+++ b/sample/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     {{> $.tags }}
+    {{> $.styles }}
+    {{> $.scripts }}
 </head>
 <body>
     {{> aside/aside.partial.html }}
@@ -9,3 +11,4 @@
         <h1>Hello World!</h1>
     </div>
 </body>
+</html>
