--- a/sample/index.html
+++ b/sample/index.html
@@ -10,5 +10,10 @@
     <div>
         <h1>Hello World!</h1>
     </div>
+    {{{{raw-block}}}}
+        {{#each something}}
+            {{this}}
+        {{/each}}
+    {{{{/raw-block}}}}
 </body>
 </html>
