adding express routes

--- a/sample/blogs/blog.dynamic.html
+++ b/sample/blogs/blog.dynamic.html
@@ -8,7 +8,7 @@
 <body>
     {{> aside/aside.partial.html }}
     <div>
-        <h1>Blog data would go here.</h1>
+        <h1 class="{{foo}}">Blog data would go here.</h1>
     </div>
 </body>
 </html>
